# OpalCore-old

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
examples/: Readme.md
examples/module/: CMakeLists.txt  Readme.md
examples/module/protos/: CMakeLists.txt
extras/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  readme.md
src/HIL/: imu.cpp  imu.hpp
src/SHIL/: CMakeLists.txt  Readme.md  fg_out.xml  imu.cpp  imu.hpp
src/core/: CMakeLists.txt  hecate.cpp  hecate.hpp
src/core/hecate/: CMakeLists.txt  hecate.cpp  hecate.hpp
src/core/hecate/protos/: CMakeLists.txt  actuators.proto  core.proto
src/core/hectate/: CMakeLists.txt  hecate.cpp
src/core/protos/: actuators.proto  core.proto  imu.proto
src/core/shil/: CMakeLists.txt  PracticalSocket.cpp  broadcaster.cpp  broadcaster.hpp  imu.cpp  imu.hpp
src/fixed_wing/stabalization/: CMakeLists.txt  stabalization.cpp  stabalization.hpp
src/fixed_wing/stabalization/protos/: CMakeLists.txt  aircraft_definition.proto  parameters.proto
src/modules/: CMakeLists.txt
src/modules/shil/: CMakeLists.txt  Readme.md  imu.cpp  imu.hpp
src/modules/shil/protos/: CMakeLists.txt  test.proto
tools/: nanopb_cpp.py
tools/opal-builder/: Readme.md  current_opalpilot.gv  db.json  opalbuilder.py  test.py
tools/opal-builder/resources/: complex_module.hpp  simple_module.hpp
tools/opal-builder/test/: db.json  test_complex.gv  test_simple.gv
tools/test/: core.pb.h  imu.pb.h  imu.pb.hpp
